Bug 536463: Rename nsTableOuterFrame::GetMargin to 'GetChildMargin', so it won't hide unrelated inherited method. r=dbaron